--- a/NEON_manuscript/Case studies/mvgam_case_study1.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study1.Rmd
@@ -15,7 +15,18 @@ library(knitr)
 opts_chunk$set(tidy.opts=list(width.cutoff=40),tidy=TRUE)
 ```
 
-Generalised Additive Models (GAMs) are incredibly flexible tools that have found particular application in the analysis of time series. In ecology, a host of recent papers and workshops (i.e. the [2018 Ecological Society of America workshop on GAMs](https://noamross.github.io/mgcv-esa-2018/) that was hosted by Eric Pedersen, David L. Miller, Gavin Simpson, and Noam Ross) have drawn special attention to the wide range of applications that GAMs have for addressing complex ecological problems. Given the many ways that GAMs can model temporal data, it is tempting to use the smooth functions estimated by a GAM to produce out of sample forecasts. Here we will inspect the behaviours of smoothing splines when extrapolating to data outside the range of the training data to examine whether this can be useful in practice. First we load the `AirPassengers` data from the `forecast` package and convert to an `xts` object. This series is a good starting point as it should be highly forecastable given its stable seasonal pattern and nearly linear trend. We will work in the `mvgam` package, which fits GAMs using MCMC sampling via the `JAGS` software (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
+Generalised Additive Models (GAMs) are incredibly flexible tools that have found particular application in the analysis of time series. In ecology, a host of recent papers and workshops (i.e. the [2018 Ecological Society of America workshop on GAMs](https://noamross.github.io/mgcv-esa-2018/) that was hosted by Eric Pedersen, David L. Miller, Gavin Simpson, and Noam Ross) have drawn special attention to the wide range of applications that GAMs have for addressing complex ecological problems. Given the many ways that GAMs can model temporal data, it is tempting to use the smooth functions estimated by a GAM to produce out of sample forecasts. Here we will inspect the behaviours of smoothing splines when extrapolating to data outside the range of the training data to examine whether this can be useful in practice. 
+
+Here we will work in the `mvgam` package, which fits dynamic GAMs using MCMC sampling via the `JAGS` software (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)). Briefly, assume $\tilde{\boldsymbol{y}}_{t}$ is the conditional expectation of a discrete response variable $\boldsymbol{y}$ at time $\boldsymbol{t}$. Asssuming $\boldsymbol{y}$ is drawn from an exponential distribution (such as Poisson or Negative Binomial) with a log link function, the linear predictor for a dynamic GAM is written as:
+
+$$log(\tilde{\boldsymbol{y}}_{t})={\boldsymbol{B}}_0+\sum\limits_{i=1}^I\boldsymbol{s}_{i,t}\boldsymbol{x}_{i,t}+\boldsymbol{z}_{t}\,,$$
+Here $\boldsymbol{B}_{0}$ is the unknown intercept, the $\boldsymbol{s}$'s are unknown smooth functions of the covariates ($\boldsymbol{x}$'s) and $\boldsymbol{z}$ is a dynamic latent trend component. Each smooth function $\boldsymbol{s}_{i}$ is composed of spline like basis expansions whose coefficients, which must be estimated, control the shape of the functional relationship between $\boldsymbol{x}_{i}$ and $log(\tilde{\boldsymbol{y}})$. The size of the basis expansion limits the smooth’s potential complexity, with a larger set of basis functions allowing greater flexibility. Several advantages of GAMs are that they can model a diversity of response families, including discrete distributions (i.e. Poisson or Negative Binomial) that accommodate ecological features such as zero-inflation, and that they can be formulated to include hierarchical smoothing for multivariate responses. For the dynamic component, in its most basic form we assume a random walk with drift:
+
+$$\boldsymbol{z}_{t}=\phi+\boldsymbol{z}_{t-1}+\boldsymbol{e}_{t}\,,$$
+where $\phi$ is an optional drift parameter (if the latent trend is assumed to not be stationary) and $\boldsymbol{e}$ is drawn from a zero-centred Gaussian distribution. This model is easily modified to include autoregressive terms, which `mvgam` accomodates up to `order = 3`.
+
+#AirPassengers example
+First we load the `AirPassengers` data from the `forecast` package and convert to an `xts` object. This series is a good starting point as it should be highly forecastable given its stable seasonal pattern and nearly linear trend
 ```{r message=FALSE, warning = FALSE}
 #devtools::install_github("nicholasjclark/mvgam")
 library(mvgam)
@@ -46,12 +57,13 @@ head(fake_data$data_train)
 head(fake_data$data_test)
 ```
 
-As a first pass at modelling this series, we will fit a GAM that includes a seasonal smooth and a yearly smooth. As the seasonality is cyclic, we will use a cyclic cubic regression spline for `season`. The knots are set so that the boundaries of the cyclic smooth match up between December 31 and January 1. We will stick with the default thin plate regression spline for `year`. This is similar to what we might do when fitting a model in `mgcv` to try and forecast ahead, except here we also have an explicit model for the residual component. `mvgam` uses the `jagam` function from the `mgcv` package to generate a skeleton `JAGS` file and updates that file to incorporate any dynamic trend components (so far limited to no trend, random walks or AR models up to order 3). This is advantageous as any GAM that is allowed in `mgcv` can in principle be used in `mvgam` to fit dynamic linear models with smooth functions for nonlinear covariate effects. For multivariate series, `mvgam` also includes an option for dimension reduction by inducing trend correlations via a dynamic factor process. Here we use the Negative Binomial family and a burnin length of `2000` iterations (in practice we would probably run these models for a bit longer, but they tend to converge rather quickly for univariate series thanks to the useful starting values supplied by `jagam`). Note that feeding the `data_test` object does not mean that these values are used in training of the model. Rather, they are included as `NA` so that we can automatically create a forecast from the posterior predictions for these observations. This is useful for plotting forecasts without needing to run new data through the model's equations later on
+As a first pass at modelling this series, we will fit a GAM that includes a seasonal smooth and a yearly smooth, as well as their tensor product interaction. As the seasonality is cyclic, we will use a cyclic cubic regression spline for `season`. The knots are set so that the boundaries of the cyclic smooth match up between December 31 and January 1. We will stick with the default thin plate regression spline for `year`. This is similar to what we might do when fitting a model in `mgcv` to try and forecast ahead, except here we also have an explicit model for the residual component. `mvgam` uses the `jagam` function from the `mgcv` package to generate a skeleton `JAGS` file and updates that file to incorporate any dynamic trend components (so far limited to no trend, random walks or AR models up to order 3). This is advantageous as any GAM that is allowed in `mgcv` can in principle be used in `mvgam` to fit dynamic linear models with smooth functions for nonlinear covariate effects. For multivariate series, `mvgam` also includes an option for dimension reduction by inducing trend correlations via a dynamic factor process. Here we use the Negative Binomial family and a burnin length of `2000` iterations (in practice we would probably run these models for a bit longer, but they tend to converge rather quickly for univariate series thanks to the useful starting values supplied by `jagam`). Note that feeding the `data_test` object does not mean that these values are used in training of the model. Rather, they are included as `NA` so that we can automatically create a forecast from the posterior predictions for these observations. This is useful for plotting forecasts without needing to run new data through the model's equations later on
 ```{r}
 mod1 <- mvjagam(data_train = fake_data$data_train,
                data_test = fake_data$data_test,
                formula = y ~ s(season, bs = c('cc'), k = 12) +
-                 s(year, k = 5),
+                 s(year, k = 5) +
+                  ti(season, year, bs = c('cc', 'tp'), k = c(12, 3)),
                knots = list(season = c(0.5, 12.5)),
                family = 'nb',
                trend_model = 'None',
@@ -69,7 +81,7 @@ Inspect the summary from the model, which is somewhat similar to an `mgcv` model
 summary_mvgam(mod1)
 ```
 
-`mvgam` takes a fitted `gam` model and adapts the model file to fit in `JAGS`, with possible extensions to deal with stochastic trend components and other features. But as this model has not been modified much from the original `gam` model with the same formula (i.e. we have not added any stochastic trend components to the linear predictor yet, which is the main feature of `mvgam`), the summary of the unmodified `gam` model is also useful and fairly accurate. Note however that this base model will always be Poisson distributed because the `jagam` function does not currently support Negative Binomial distributions. 
+`mvgam` takes a fitted `gam` model and adapts the model file to fit in `JAGS`, with possible extensions to deal with stochastic trend components and other features. But as this model has not been modified much from the original `gam` model with the same formula (i.e. we have not added any stochastic trend components to the linear predictor yet, which is the main feature of `mvgam`), the summary of the unmodified `gam` model is also useful and fairly accurate 
 ```{r}
 summary(mod1$mgcv_model)
 ```
@@ -86,7 +98,7 @@ plot_mvgam_smooth(mod1, series = 1, smooth = 'year')
 
 Perform a series of posterior predictive checks to see if the model is able to simulate data for the training period that looks realistic and unbiased. First, examine simulated kernel densities for posterior predictions (`yhat`) and compare to the density of the observations (`y`)
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(mod1, series = 1, type = 'density')
+plot_mvgam_ppc(mod1, series = 1, type = 'density', legend_position = 'bottomright')
 ```
 
 Now plot the distribution of predicted means compared to the observed mean
@@ -129,7 +141,8 @@ abline(v = max(fake_data$data_train$year), lty = 'dashed')
 
 We can also re-do the posterior predictive checks, but this time focusing only on the out of sample period. This will give us better insight into how the model is performing and whether it is able to simulate realistic and unbiased future values
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(mod1, series = 1, type = 'density', data_test = fake_data$data_test)
+plot_mvgam_ppc(mod1, series = 1, type = 'density', data_test = fake_data$data_test,
+               legend_position = 'bottomright')
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
@@ -149,7 +162,8 @@ There are some very clear problems with the way this model is generating future 
 mod2 <- mvjagam(data_train = fake_data$data_train,
                data_test = fake_data$data_test,
                formula = y ~ s(season, bs = c('cc'), k = 12) +
-                 s(year, bs = "bs", m = c(3, 2, 1, 0)),
+                 s(year, bs = "bs", m = c(3, 2, 1, 0)) +
+                  ti(season, year, bs = c('cc', 'tp'), k = c(12, 3), m = c(2, 1)),
                knots = list(season = c(0.5, 12.5),
                             year = c(min(fake_data$data_train$year) - 1,
                                      min(fake_data$data_train$year),
@@ -205,14 +219,15 @@ plot_mvgam_ppc(mod2, series = 1, type = 'pit', data_test = fake_data$data_test)
 Can we improve the forecasts by removing our reliance on extrapolation? Now we will fit a model in which the GAM component of the linear predictor captures the repeated seasonality (again with a cyclic smooth) and a dynamic latent trend captures the residual process using AR parameters (up to order 3). This model is a mildly modified version of the base `mgcv` model where the linear predictor is augmented with the latent trend component. Slightly longer burnin is used here due to the added complexity of the time series component, but the model still fits in ~ 30 seconds on most machines
 ```{r message = F}
 mod3 <- mvjagam(data_train = fake_data$data_train,
-               data_test = fake_data$data_test,
-               formula = y ~ s(season, bs = c('cc'), k = 12),
-               knots = list(season = c(0.5, 12.5)),
-               family = 'nb',
-               trend_model = 'AR3',
-               drift = TRUE,
-               n.burnin = 3000,
-               auto_update = F)
+                data_test = fake_data$data_test,
+                formula = y ~ s(season, bs = c('cc'), k = 12) + 
+                  ti(season, year, bs = c('cc', 'tp'), k = c(12, 3), m = c(2, 1)),
+                knots = list(season = c(0.5, 12.5)),
+                family = 'nb',
+                trend_model = 'AR3',
+                drift = TRUE,
+                n.burnin = 2000,
+                auto_update = F)
 ```
                
 In this case the fitted model is more different to the base `mgcv` model that was used in `jagam` to produce the skeleton `JAGS` file, so the summary of that base model is less accurate. But we can still check the model summary for the `mvjagam` mdoel to examine convergence for key parameters
@@ -328,3 +343,321 @@ Here it is apparent that the distribution has shifted slightly in light of the `
 unlink('pfilter', recursive = T)
 ```
 
+#Lynx example
+For our next univariate example, we will again pursue how challenging it can be to forecast ahead with conventional GAMs and how `mvgam` overcomes these challenges. We begin by replicating the lynx analysis from [2018 Ecological Society of America workshop on GAMs](https://noamross.github.io/mgcv-esa-2018/) that was hosted by Eric Pedersen, David L. Miller, Gavin Simpson, and Noam Ross, with some minor adjustments. First, load the data and plot the series as well as its estimated autocorrelation function
+```{r, fig.show='hold', fig.align='center'}
+library(mvgam)
+data(lynx)
+lynx_full = data.frame(year = 1821:1934, 
+                       population = as.numeric(lynx))
+plot(lynx_full$population, type = 'l', ylab = 'Lynx trappings',
+     xlab = 'Time')
+acf(lynx_full$population, main = '')
+```
+
+
+There is a clear ~19-year cyclic pattern to the data, so I create a `season` term that can be used to model this effect and give a better representation of the data generating process. I also create a new `year` term that represents which long-term cycle each observation is in
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'))
+lynx_full$season <- (lynx_full$year %%19) + 1
+cycle_ends <- c(which(lynx_full$season == 19), NROW(lynx_full))
+cycle_starts <- c(1, cycle_ends[1:length(which(lynx_full$season == 19))] + 1)
+cycle <- vector(length = NROW(lynx_full))
+for(i in 1:length(cycle_starts)){
+  cycle[cycle_starts[i]:cycle_ends[i]] <- i
+}
+lynx_full$year <- cycle
+```
+
+
+Add lag indicators needed to fit the nonlinear lag models that gave the best one step ahead point forecasts in the ESA workshop example. As in the example, we specify the `default` argument in the `lag` function as the mean log population.
+```{r}
+mean_pop_l = mean(log(lynx_full$population))
+lynx_full = dplyr::mutate(lynx_full,
+                   popl = log(population),
+                   lag1 = dplyr::lag(popl,1, default = mean_pop_l),
+                   lag2 = dplyr::lag(popl,2, default = mean_pop_l),
+                   lag3 = dplyr::lag(popl,3, default = mean_pop_l),
+                   lag4 = dplyr::lag(popl,4, default = mean_pop_l),
+                   lag5 = dplyr::lag(popl,5, default = mean_pop_l),
+                   lag6 = dplyr::lag(popl,6, default = mean_pop_l))
+```
+
+For `mvgam` models, the response needs to be labelled `y` and we also need an indicator of the series name as a `factor` variable
+```{r}
+lynx_full$y <- lynx_full$population
+lynx_full$series <- factor('series1')
+```
+
+Split the data into training (first 40 years) and testing (next 10 years of data) to evaluate multi-step ahead forecasts
+```{r}
+lynx_train = lynx_full[1:40, ]
+lynx_test = lynx_full[41:50, ]
+```
+
+The best-forecasting model in the course was with nonlinear smooths of lags 1 and 2; we use those here is that we also include a cyclic smooth for the 19-year cycles as this seems like an important feature, as well as a yearly smooth for the long-term trend. Following the information about spline extrapolation above, we again fit a cubic `B` spline for the trend with a mix of penalties to try and reign in wacky extrapolation behaviours, and we extend the penalty to cover the years that we wish to predict. This will hopefully give us better uncertainty estimates for the forecast. In this example we assume the observations are Poisson distributed
+```{r}
+lynx_mgcv = gam(population ~ 
+                  s(season, bs = 'cc', k = 19) +
+                  s(year, bs = 'bs', m = c(3, 2, 1, 0)) + 
+                  s(lag1, k = 5) +
+                  s(lag2, k = 5),
+               knots = list(season = c(0.5, 19.5),
+                            year = c(min(lynx_train$year - 1),
+                                     min(lynx_train$year),
+                                     max(lynx_test$year),
+                                     max(lynx_test$year) + 1)),
+                data = lynx_train, family = "poisson",
+                method = "REML")
+```
+
+Inspect the model's summary and estimated smooth functions for the season, year and lag terms
+```{r, fig.show='hold', fig.align='center'}
+summary(lynx_mgcv)
+plot(lynx_mgcv, select = 1)
+plot(lynx_mgcv, select = 2)
+plot(lynx_mgcv, select = 3)
+plot(lynx_mgcv, select = 4)
+```
+
+This model captures most of the deviance in the series and the functions are all confidently estimated to be non-zero and non-flat. So far, so good. Now for some forecasts for the out of sample period. First we must take posterior draws of smooth beta coefficients to incorporate the uncertainties around smooth functions when simulating forecast paths
+```{r}
+coef_sim <- gam.mh(lynx_mgcv)$bs
+```
+
+
+Now we define a function to perform forecast simulations from the nonlinear lag model in a recursive fashion. Using starting values for the last two lags, the function will iteratively project the path ahead with a random sample from the model's coefficient posterior
+```{r}
+recurse_nonlin = function(model, lagged_vals, h){
+  # Initiate state vector
+  states <- rep(NA, length = h + 2)
+  # Last two values of the conditional expectations begin the state vector
+  states[1] <- as.numeric(exp(lagged_vals[2]))
+  states[2] <- as.numeric(exp(lagged_vals[1]))
+  # Get a random sample of the smooth coefficient uncertainty matrix
+  # to use for the entire forecast horizon of this particular path
+  gam_coef_index <- sample(seq(1, NROW(coef_sim)), 1, T)
+  # For each following timestep, recursively predict based on the
+  # predictions at each previous lag
+  for (t in 3:(h + 2)) {
+    # Build the GAM linear predictor matrix using the two previous lags
+    # of the (log) density
+    newdata <- data.frame(lag1 = log(states[t-1] + 0.01),
+                          lag2 = log(states[t-2] + 0.01),
+                          season = lynx_test$season[t-2],
+                          year = lynx_test$year[t-2])
+    colnames(newdata) <- c('lag1', 'lag2', 'season', 'year')
+    Xp <- predict(model, newdata = newdata, type = 'lpmatrix')
+    # Calculate the posterior prediction for this timepoint
+    mu <- rpois(1, lambda = exp(Xp %*% coef_sim[gam_coef_index,]))
+    # Fill in the state vector and iterate to the next timepoint
+    states[t] <- mu
+  }
+  # Return the forecast path
+  states[-c(1:2)]
+}
+```
+
+Create the GAM's forecast distribution by generating `1000` simulated forecast paths. Each path is fed the true observed values for the last two lags of the first out of sample timepoint, but they can deviate when simulating ahead depending on their particular draw of possible coefficients. Note, this is a bit slow and could easily be parallelised to speed up computations
+```{r}
+gam_sims <- matrix(NA, nrow = 1000, ncol = 10)
+for(i in 1:1000){
+  gam_sims[i,] <- recurse_nonlin(lynx_mgcv,
+                                 lagged_vals = c(lynx_test$lag1[1],
+                                                 lynx_test$lag2[1]),
+                                 h = 10)
+}
+```
+
+Plot the mgcv model's out of sample forecast for the next 10 years ahead
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+cred_ints <- apply(gam_sims, 2, function(x) hpd(x, 0.95))
+yupper <- max(cred_ints) * 1.25
+plot(cred_ints[3,] ~ seq(1:NCOL(cred_ints)), type = 'l',
+     col = rgb(1,0,0, alpha = 0),
+     ylim = c(0, yupper),
+     ylab = 'Predicted lynx trappings',
+     xlab = 'Forecast horizon',
+     main = 'mgcv')
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 100), border = NA)
+cred_ints <- apply(gam_sims, 2, function(x) hpd(x, 0.68))
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 180), border = NA)
+lines(cred_ints[2,], col = rgb(150, 0, 0, max = 255), lwd = 2, lty = 'dashed')
+points(lynx_test$population[1:10], pch = 16)
+lines(lynx_test$population[1:10])
+```
+
+A decent forecast? The shape is certainly correct, but the 95% uncertainty intervals appear to be far too wide (i.e. our upper interval extends to up to 8 times the maximum number of trappings that have ever been recorded up to this point). This is almost entirely due to the extrapolation behaviour of the B spline, as the lag smooth functions are not encountering values very far outside the ranges they've already been trained on so they are resorting mostly to interpolation. But a better way to evaluate than simply using visuals is to calculate a probabilistic score. Here we use the Discrete Rank Probabiilty Score, which gives us an indication of how well calibrated our forecast's uncertainty intervals are by comparing the mass of the forecast density against the true observed values. Forecasts with overly wide intervals are penalised, as are forecasts with overly narrow intervals that do not contain the true observations. At the same time we calculate coverage of the forecast's 90% intervals, which is another useful way of evaluating different forecast proposals
+```{r}
+  # Discrete Rank Probability Score and coverage of 90% interval
+  drps_score <- function(truth, fc, interval_width = 0.9){
+    nsum <- 1000
+    Fy = ecdf(fc)
+    ysum <- 0:nsum
+    indicator <- ifelse(ysum - truth >= 0, 1, 0)
+    score <- sum((indicator - Fy(ysum))^2)
+
+    # Is value within 90% HPD?
+    interval <- hpd(fc, interval_width)
+    in_interval <- ifelse(truth <= interval[3] & truth >= interval[1], 1, 0)
+    return(c(score, in_interval))
+  }
+
+  # Wrapper to operate on all observations in fc_horizon
+  drps_mcmc_object <- function(truth, fc, interval_width = 0.9){
+    indices_keep <- which(!is.na(truth))
+    if(length(indices_keep) == 0){
+      scores = data.frame('drps' = rep(NA, length(truth)),
+                          'interval' = rep(NA, length(truth)))
+    } else {
+      scores <- matrix(NA, nrow = length(truth), ncol = 2)
+      for(i in indices_keep){
+        scores[i,] <- drps_score(truth = as.vector(truth)[i],
+                                 fc = fc[,i], interval_width)
+      }
+    }
+    scores
+  }
+
+# Calculate DRPS over the 10-year horizon for the mgcv model
+lynx_mgcv1_drps <- drps_mcmc_object(truth = lynx_test$population[1:10], 
+                   fc = gam_sims)
+```
+
+What if we remove the yearly trend and let the lag smooths capture more of the temporal dependencies? Will that improve the forecast distribution? Run a second model and plot the forecast (note that this plot will be on quite a different y-axis scale compared to the first plot above)
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+lynx_mgcv2 = gam(population ~ 
+                  s(season, bs = 'cc', k = 19) +
+                  s(lag1, k = 5) +
+                  s(lag2, k = 5),
+                data = lynx_train, family = "poisson",
+                method = "REML")
+coef_sim <- gam.mh(lynx_mgcv2)$bs
+gam_sims <- matrix(NA, nrow = 1000, ncol = 10)
+for(i in 1:1000){
+  gam_sims[i,] <- recurse_nonlin(lynx_mgcv2,
+                                 lagged_vals = c(lynx_test$lag1[1],
+                                                 lynx_test$lag2[1]),
+                                 h = 10)
+}
+cred_ints <- apply(gam_sims, 2, function(x) hpd(x, 0.95))
+yupper <- max(cred_ints) * 1.25
+plot(cred_ints[3,] ~ seq(1:NCOL(cred_ints)), type = 'l',
+     col = rgb(1,0,0, alpha = 0),
+     ylim = c(0, yupper),
+     ylab = 'Predicted lynx trappings',
+     xlab = 'Forecast horizon',
+     main = 'mgcv')
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 100), border = NA)
+cred_ints <- apply(gam_sims, 2, function(x) hpd(x, 0.68))
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 180), border = NA)
+lines(cred_ints[2,], col = rgb(150, 0, 0, max = 255), lwd = 2, lty = 'dashed')
+points(lynx_test$population[1:10], pch = 16)
+lines(lynx_test$population[1:10])
+```
+
+Calculate DRPS over the 10-year horizon for the second mgcv model
+```{r}
+lynx_mgcv2_drps <- drps_mcmc_object(truth = lynx_test$population[1:10], 
+                   fc = gam_sims)
+```
+
+                   
+This forecast is highly overconfident, with very unrealistic uncertainty intervals due to the interpolation behaviours of the lag smooths. You can certainly keep trying different formulations (our experience is that the B spline variant above produces the best forecasts from any tested `mgcv` model, but we did not test an exhaustive set), but hopefully it is clear that forecasting using splines is tricky business and it is likely that each time you do it you'll end up honing in on different combinations of penalties, knot selections etc.... Now we will fit an `mvgam` model for comparison. This model fits a similar model to the `mgcv` model directly above but with a full time series model for the errors (in this case an `AR1` process), rather than smoothing splines that do not incorporate a concept of the future. We do not use a `year` term to reduce any possible extrapolation and because the latent dynamic component should capture this temporal variation. We estimate the model in `JAGS` using MCMC sampling (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
+```{r}
+lynx_mvgam <- mvjagam(data_train = lynx_train,
+               data_test = lynx_test,
+               formula = y ~ s(season, bs = 'cc', k = 19),
+               knots = list(season = c(0.5, 19.5)),
+               family = 'poisson',
+               trend_model = 'AR1',
+               n.burnin = 5000,
+               auto_update = F)
+```
+
+Calculate the out of sample forecast from the fitted `mvgam` model and plot
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+fits <- MCMCvis::MCMCchains(lynx_mvgam$jags_output, 'ypred')
+fits <- fits[,(NROW(lynx_mvgam$obs_data)+1):(NROW(lynx_mvgam$obs_data)+10)]
+cred_ints <- apply(fits, 2, function(x) hpd(x, 0.95))
+yupper <- max(cred_ints) * 1.25
+plot(cred_ints[3,] ~ seq(1:NCOL(cred_ints)), type = 'l',
+     col = rgb(1,0,0, alpha = 0),
+     ylim = c(0, yupper),
+     ylab = '',
+     xlab = 'Forecast horizon',
+     main = 'mvgam')
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 100), border = NA)
+cred_ints <- apply(fits, 2, function(x) hpd(x, 0.68))
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 180), border = NA)
+lines(cred_ints[2,], col = rgb(150, 0, 0, max = 255), lwd = 2, lty = 'dashed')
+points(lynx_test$population[1:10], pch = 16)
+lines(lynx_test$population[1:10])
+```
+
+Calculate DRPS over the 10-year horizon for the mvgam model
+```{r}
+lynx_mvgam_drps <- drps_mcmc_object(truth = lynx_test$population[1:10], 
+                   fc = fits)
+```
+
+How do the out of sample DRPS scores stack up for these three models? Remember, our goal is to minimise DRPS while providing 90% intervals that are near, but not less than, `0.9`. The DRPS and 90% interval coverage for the first `mgcv` model (with the `B` spline year term)
+```{r}
+sum(lynx_mgcv1_drps[,1])
+mean(lynx_mgcv1_drps[,2])
+```
+
+For the second `mgcv` model
+```{r}
+sum(lynx_mgcv2_drps[,1])
+mean(lynx_mgcv2_drps[,2])
+```
+
+And for the `mvgam` model
+```{r}
+sum(lynx_mvgam_drps[,1])
+mean(lynx_mvgam_drps[,2])
+```
+
+The `mvgam` has much more realistic uncertainty than the `mgcv` versions above. Of course this is just one out of sample comparison, and to really determine which model is most appropriate for forecasting we would want to run many of these tests using a [rolling window approach](https://robjhyndman.com/hyndsight/tscv/). Have a look at this model's summary to see what is being estimated (note that longer MCMC runs would probably be needed to increase effective sample sizes)
+```{r}
+summary_mvgam(lynx_mvgam)
+```
+
+Now inspect each model's estimated smooth for the 19-year cyclic pattern. Note that the `mvgam` smooth plot is on a different scale compared to the `mgcv` plot, but interpretation is similar. The `mgcv` smooth is much wigglier, likely because it is compensating for any remaining autocorrelation not captured by the lag smooths. We could probably remedy this by reducing `k` in the seasonal smooth for the `mgcv` model (in practice this works well, but leaving `k` larger for the `mvgam`'s seasonal smooth is recommended as our experience is that this tends to lead to better performance and convergence)
+```{r, fig.show='hold', fig.align='center'}
+plot(lynx_mgcv, select=1, shade=T)
+plot_mvgam_smooth(lynx_mvgam, 1, 'season')
+```
+
+We can also view the mvgam's posterior predictions for the entire series (testing and training)
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_fc(lynx_mvgam, data_test = lynx_test)
+```
+
+And the estimated trend
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_trend(lynx_mvgam, data_test = lynx_test)
+```
+
+A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate contributions to forecast uncertainty for the GAM smooth functions and the latent trend using `mvgam`
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_uncertainty(lynx_mvgam, data_test = lynx_test)
+```
+
+Both components contribute to forecast uncertainty, with the trend component contributing more over time (as it should since this is the stochastic forecast component). This suggests we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
+```{r, fig.width=6, fig.height=6, fig.align='center'}
+plot_mvgam_resids(lynx_mvgam)
+```
